# UVD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  llvm.tar.xz
include/Util/: config.h
svf/: cmake_install.cmake
svf-llvm/: cmake_install.cmake
svf-llvm/include/SVF-LLVM/: ICFGBuilder.h  LLVMModule.h  SVFIRBuilder.h
svf-llvm/lib/: ICFGBuilder.cpp  LLVMModule.cpp  SVFIRBuilder.cpp
svf-llvm/tools/: CMakeLists.txt  cmake_install.cmake
svf-llvm/tools/CFL/: cmake_install.cmake
svf-llvm/tools/DDA/: cmake_install.cmake
svf-llvm/tools/Example/: cmake_install.cmake  svf-ex.cpp
svf-llvm/tools/MTA/: cmake_install.cmake
svf-llvm/tools/SABER/: cmake_install.cmake  saber.cpp
svf-llvm/tools/UVD/: CMakeLists.txt  cmake_install.cmake  uvd.cpp
svf-llvm/tools/WPA/: cmake_install.cmake
svf/include/Graphs/: GraphPrinter.h  ICFGNode.h
svf/include/SABER/: SrcSnkDDA.h  UseAfterFreeChecker.h
svf/include/SVFIR/: SVFIR.h  SVFModule.h  SVFValue.h
svf/include/Util/: Casting.h  ExtAPI.h  GraphReachSolver.h  SVFUtil.h
svf/lib/Graphs/: ICFG.cpp
svf/lib/SABER/: SrcSnkDDA.cpp  UseAfterFreeChecker.cpp
svf/lib/SVFIR/: SVFIR.cpp  SVFValue.cpp
testcase/: fopen_normal_onebug.c  icfg_initial.dot  uaf_alias_nobug.c  uaf_alias_onebug.c  uaf_alias_onebug_crossfunction_onebug.c  uaf_alias_onebug_threemember_onebug.c  uaf_alias_onebug_visit_alias.c  uaf_branch_nobug.c  uaf_branch_onebug.c  uaf_cross3func_nobug.c  uaf_cross3func_onebug.c  uaf_large_two_bugs.c  uaf_normal_anotherfunction_onebug.c  uaf_static_global_onebug.c
(+5 files in other folders)
